Add a link to the Google Code project page from the help screen.

--- a/talkingrss/res/raw/help.html
+++ b/talkingrss/res/raw/help.html
@@ -2,10 +2,13 @@
 <BODY>
 <H1>Talking RSS Reader</H1>
 
-<H2>Talking RSS, using Google Reader</H2>
+<H2>A Talking Google Reader app for Android</H2>
 
 <P>By St&eacute;phane Doyon <CODE>&lt;sdoyon@google.com&gt;</CODE>
 <P>Copyright &copy; 2009 Google Inc.
+
+Google Code project page: <a href="http://talkingrssreader.googlecode.com">
+http://talkingrssreader.googlecode.com</a>
 
 <H3>How it works</H3>
 
