--- a/talkingrss/res/raw/help.html
+++ b/talkingrss/res/raw/help.html
@@ -20,7 +20,8 @@ and shows articles one by one, in reverse chronological order.
 displayed. The sentence currently being spoken is colored in green.
 
 <P>Speech can be interrupted and restarted by pressing
-the <I>CALL</I> button.
+the <I>CALL</I> or <I>SEARCH</I> button,
+or the pause button at the bottom center of the screen.
 
 <P>To move to the previous or next sentence, spin the trackball up
 or down while the app is talking.
@@ -32,7 +33,7 @@ sentence from the top of the screen.
 is not talking. Clicking a link launches the browser, which does not talk.
 
 <P>You can have sentences spoken one at a time by holding
-the <I>CALL</I> button and spinning the trackball up or down.
+the <I>CALL</I> or <I>SEARCH</I> button and spinning the trackball up or down.
 
 <P>The <I>Next</I> and <I>Prev</I> article buttons are located at the
 bottom corners of the screen, where they can easily be tapped without
